# multisight-buildy

./: CMakeLists.txt  README.txt  buildy.json  custom.spec  packaging.cmake
build_scripts/multisight/: build_app.sh  build_lib.sh
build_scripts/vx/: build_3rdparty.bat  build_3rdparty.sh  build_app.bat  build_app.sh  build_lib.bat  build_lib.sh
example_config/: buildy.json  buildy_vx.json
include/: Build.h  Config.h  GIT.h  Option.h  Test.h  Utils.h
source/: Build.cpp  Config.cpp  GIT.cpp  Main.cpp  Option.cpp  Test.cpp  Utils.cpp
